--- a/portafolio.css
+++ b/portafolio.css
@@ -1,3 +1,13 @@
+:root {
+  --grayLight: #878787;
+  --grayDark: #494949;
+  --greenDark: #0f765a;
+  --greenLight: #b7e144;
+  --white: #ffffff;
+  --pink: #f8b28c;
+  --orange: #f07f14;
+  --yellow: #ffe144;
+}
 
 /*-----------------------------------------------------------------------------*/
 /*-------------------------------Header----------------------------------------*/
@@ -22,6 +32,51 @@
 }
 
 /*-----------------------------------------------------------------------------*/
+/*-------------------------------Portafolio------------------------------------*/
+/*-----------------------------------------------------------------------------*/
+.portafolio {
+  width: 100%;
+  height: auto;
+  padding: 3% 15% 3%;
+  background-color: var(--white);
+}
+ .portafolioContainer {
+  height: auto;
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+ }
+
+ .elemento {
+   width: 220px;
+   height: 410px;
+   margin-top: 3%;
+   background-color: var(--white);
+   box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.2);
+ }
+ 
+ .imageFolio {
+   width: 220px;
+ }
+
+ .textFolio{
+   margin: 8%;
+ }
+
+ .text {
+   font-size: 12px;
+   list-style-type: circle;
+ }
+ 
+ .textFolio p {
+   margin-top: 4%;
+   font-size: 10px;
+ }
+
+
+
+
+/*-----------------------------------------------------------------------------*/
 /*--------------------------------Versión Responsie----------------------------*/
 /*-----------------------------------------------------------------------------*/
 
@@ -38,5 +93,3 @@
     width: 70%;
   }
 }
-
-
